--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0",
+    "react-force-graph": "^1.44.4",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "scss": "^0.2.4",
